crates/wolf_sema/tests/snapshots/diagnostics__e0410_let_reassign.snap
---
source: crates/wolf_sema/tests/diagnostics.rs
expression: render(&res)
---
error[E0410]: `x` is bound with `let`, so it cannot be assigned again
 --> mem:///main.lu:3:5
  |
2 |     let x = 1
  |     --- the binding is made immutable here
3 |     x = 2
  |     ^ this assignment needs a mutable binding
  |
  = note: `let` names a value once. Declare the binding with `var` to update it in place, or
    shadow it with a second `let` if the next value is really a new thing.
help: make the binding mutable: `var`
  |
2 |     var x = 1
  |
